# ga4gh-sdk

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  Cargo.toml  Dockerfile-autogen-models  README.md  Readme.md  build-models.sh  build.sh  compose.autogen-models.yml  nextest.toml  run-integration-tests.sh  run-tests.sh  rustfmt.toml
.github/ISSUE_TEMPLATE/: general-purpose.md
.github/actions/setup/poetry/: action.yaml
.github/workflows/: ci.yml  code_quality.yaml  code_test.yaml  local.yml  pr_evaluation.yaml
cli/: .dockerignore  Cargo.toml  Dockerfile  README.md
cli/ga4gh-sdk-cli/: Cargo.toml
cli/ga4gh-sdk-cli/src/: main.rs
cli/src/: download.rs  main.rs
docs/: autogenerate_OAI_models.md
extensions/: README.md  confido.ga4gh-sdk-extension.json
extensions/confido/: README.md  confido.ga4gh-sdk-extension.json
lib/: Cargo.toml
lib/.github/workflows/: ci.yml
lib/src/: configuration.rs  lib.rs  service.rs  test_utils.rs  transport.rs
lib/src/TES/models/: service.rs  service_organization.rs  service_type.rs  tes_create_task_response.rs  tes_executor.rs  tes_executor_log.rs  tes_file_type.rs  tes_input.rs  tes_list_tasks_response.rs  tes_output.rs  tes_output_file_log.rs  tes_resources.rs  tes_service_info.rs  tes_service_type.rs  tes_state.rs  tes_task.rs  tes_task_log.rs
lib/src/clients/: mod.rs
lib/src/clients/drs/models/: access_method.rs  access_method_access_url.rs  access_method_authorizations.rs  access_url.rs  authorizations.rs  bulk_access_url.rs  checksum.rs  contents_object.rs  drs_object.rs  drs_service.rs  drs_service_type.rs  error.rs  get_bulk_access_url_200_response.rs  get_bulk_objects_200_response.rs  get_service_info_200_response.rs  mod.rs  options_bulk_object_200_response.rs  post_access_url_request.rs  post_object_request.rs  service.rs  service_organization.rs  service_type.rs  summary.rs  unresolved_inner.rs
lib/src/clients/serviceinfo/: mod.rs
lib/src/clients/serviceinfo/models/: mod.rs  service.rs  service_organization.rs  service_type.rs
lib/src/clients/tes/: mod.rs
lib/src/clients/tes/models/: mod.rs  service.rs  service_organization.rs  service_type.rs  tes_create_task_response.rs  tes_executor.rs  tes_executor_log.rs  tes_file_type.rs  tes_input.rs  tes_list_tasks_params.rs  tes_list_tasks_response.rs  tes_output.rs  tes_output_file_log.rs  tes_resources.rs  tes_service_info.rs  tes_service_type.rs  tes_state.rs  tes_task.rs  tes_task_log.rs
lib/src/clients/trs/models/: checksum.rs  descriptor_type.rs  descriptor_type_with_plain.rs  error.rs  file_wrapper.rs  file_wrapper_image_type.rs  image_data.rs  image_type.rs  mod.rs  service.rs  service_organization.rs  service_type.rs  tool.rs  tool_class.rs  tool_file.rs  tool_version.rs
lib/src/clients/wes/models/: default_workflow_engine_parameter.rs  error_response.rs  log.rs  mod.rs  run_id.rs  run_list_response.rs  run_log.rs  run_request.rs  run_status.rs  service.rs  service_info.rs  service_organization.rs  service_type.rs  state.rs  wes_default_workflow_engine_parameter.rs  wes_error_response.rs  wes_log.rs  wes_run_id.rs  wes_run_list_response.rs  wes_run_log.rs  wes_run_request.rs  wes_run_status.rs  wes_service_info.rs  wes_state.rs  wes_workflow_type_version.rs  workflow_type_version.rs
lib/src/serviceinfo/: mod.rs  serviceinfo.rs
lib/src/serviceinfo/models/: service.rs  service_organization.rs  service_type.rs
lib/src/task_execution_service/: mod.rs  tes.rs
lib/src/task_execution_service/models/: service.rs  service_organization.rs  service_type.rs  tes_create_task_response.rs  tes_executor.rs  tes_executor_log.rs  tes_file_type.rs  tes_input.rs  tes_list_tasks_response.rs  tes_output.rs  tes_output_file_log.rs  tes_resources.rs  tes_service_info.rs  tes_service_type.rs  tes_state.rs  tes_task.rs  tes_task_log.rs
lib/src/tes/: configuration.rs  mod.rs  model.rs  tes.rs
lib/src/tes/models/: service.rs  service_organization.rs  service_type.rs  tes_create_task_response.rs  tes_executor.rs  tes_executor_log.rs  tes_file_type.rs  tes_input.rs  tes_list_tasks_response.rs  tes_output.rs  tes_output_file_log.rs  tes_resources.rs  tes_service_info.rs  tes_service_type.rs  tes_state.rs  tes_task.rs  tes_task_log.rs
lib/src/utils/: configuration.rs  extension.rs  extension_manager.rs  mod.rs  test_utils.rs  transport.rs
lib/tests/: funnel_service_info.rs  funnel_tes.rs
openapi/: swagger.yaml
python/: Cargo.toml  README.md  pyproject.toml
python/python/python/: __init__.py
python/python/tests/: test_all.py
python/src/: lib.rs
python/src/clients/: mod.rs  serviceinfo.rs  tes.rs
python/src/utils/: configuration.rs  mod.rs  transport.rs
python/tests/: example.py  test_all.py
tests/: Readme.md  grape.tes  sample.tes
utils/: build-models.sh  build_models.sh  build_models_wrapper.sh  script.sh
