[workspace]
members = [
    "cli"
]

[workspace.package]
version = "0.1.0"
authors = ["Aarav Mehta <aarav05mehta@gmail.com>", "Pavel Nikonorov <pavel@genxt.network>", "ELIXIR Cloud & AAI <cloud-service@elixir-europe.org> (ELIXIR Europe)"]
edition = "2021"
readme = "./README.md"
license-file = "LICENSE"
repository = "https://github.com/elixir-cloud-aai/ga4gh-sdk.git"
