[package]
name = "ga4gh-cli"
description = "A versatile, cross-platform command-line tool built around the GA4GH-SDK for working with GA4GH federated cloud environments."
repository = "https://github.com/elixir-cloud-aai/ga4gh-sdk/tree/main/cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"

[dependencies]
ga4gh-lib = { path = "../lib" }
clap = "3.0"
clap_complete = "3.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.0"
tempfile = "3.2"
dirs = "5.0.1"
anyhow = "1.0.86"
url = "2.5.2"
log = "0.4.22"
env_logger = "0.11.5"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "ga4gh-cli"
path = "src/main.rs"