[build-system]
requires = ["maturin~=1.0"]
build-backend = "maturin"

[package]
name = "python"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license-file.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python"
crate-type = ["cdylib"]

[dependencies]
ga4gh-lib = { path = "../lib" }
pyo3 = { version = "0.21", features = ["extension-module", "experimental-async"]  }
serde = "1.0.208"
serde_json = "1.0.125"
tokio = "1.39.3"
url = "2.5.2"

[package.metadata.maturin]
bindings = "pyo3"

[tool.maturin]
features = ["pyo3/generate-import-lib"] # needed for Windows aarch64
